# cop3014-lab07

./: CMakeLists.txt  lab07.pptx  lab7-1.cpp  lab7-2.cpp  price.cpp  quartsal.cpp  student.cpp  testscore.cpp
