cmake_minimum_required(VERSION 3.10)
project(cop3014_lab07)

set(CMAKE_CXX_STANDARD 11)

add_executable(lab7-1.exe lab7-1.cpp)
add_executable(lab7-2.exe lab7-2.cpp)
add_executable(quartsal.exe quartsal.cpp)
add_executable(price.exe price.cpp)
add_executable(testscore.exe testscore.cpp)
add_executable(student.exe student.cpp)

